# spv

./: .gitignore  Dockerfile  README.md  bash.sh  foundry.toml  funding.json  random.js
.github/workflows/: slither.yml  test.yml
backend_merkle_root_code/: index.js  merkle.js  merkle_root_no_reversal.js  package.json
backend_merry_test/: Cargo.toml  block_transactions.json  blockheader.json  merkle_proof.json
backend_merry_test/src/: main.rs  merkle_proof.rs  rpc_call_to_get_blockheader.rs  rpc_call_to_get_transactions.rs
broadcast/VerifySPV.s.sol/31338/: run-1742885176.json  run-1743057083.json  run-1743074977.json  run-1743159085.json  run-1743160785.json  run-1743171710.json  run-latest.json
broadcast/interaction.s.sol/31338/: run-1743058450.json  run-1743058490.json  (+20 more)
script/: VerifySPV.s.sol  blockheader.json  interaction.s.sol
src/: Types.sol  Utils.sol  VerifySPV.sol
src/babylon/: Script.sol
src/interfaces/: IVerifySPV.sol
src/libraries/: EllipticCurve.sol  LibBitcoin.sol  LibBitcoinAddress.sol  LibEllipticCurve.sol  LibSPV.sol  LibTaproot.sol  SPVLib.sol  Taproot.sol  TaprootSignatureUtils.sol
src/peerlend/: PeerLend.sol
test/: LibBitcoin.t.sol  LibSPV.t.sol  LibTaproot.t.sol  SPVLib.t.sol  Taproot.t.sol  TaprootSignatureUtils.t.sol  TestSPV.t.sol  Utils.t.sol  VerifySPV.mainnet.t.sol  VerifySPV.regtest.t.sol  VerifySPV.t.sol  VerifySPV.testnet.sol  VerifySPV.testnet.t.sol
test/fixtures/: difficultyEpoch.json  difficultyEpoch_regtest.json  difficultyEpoch_testnet.json  txs.json
test/scripts/: formatBlock.js  formatTx.js  scrapeBlocks.js
