[package]
name = "backend_merry_test"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
sha256 = "1.6.0"
tokio = { version = "1.44.1", features = ["full"] }
